# newton-actuators

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pr.yml  release.yml
control/: __init__.py
control/_src/: selection.py  types.py  usd_parser.py
control/_src/actuators/: base.py  delayed_pd.py  pid.py
control/tests/: __main__.py  test_actuators.py
newton_actuators/: __init__.py  _version.py
newton_actuators/_src/: actuator.py  delay.py  kernels.py  usd_parser.py
newton_actuators/_src/actuators/: __init__.py  base.py  dc_motor.py  delayed_pd.py  net_lstm.py  net_mlp.py  pd.py  pid.py  remotized_pd.py
newton_actuators/_src/clamping/: __init__.py  base.py  clamp.py  clamping_dc_motor.py  clamping_max_force.py  clamping_position_based.py  clamping_velocity_based.py  dc_motor_saturation.py  remotized_clamp.py
newton_actuators/_src/controllers/: __init__.py  base.py  controller_net_lstm.py  controller_net_mlp.py  controller_pd.py  controller_pid.py  net_lstm.py  net_mlp.py  pd.py  pid.py
newton_actuators/_src/dynamics/: __init__.py  base.py  clamp.py  dc_motor_saturation.py  delay.py  remotized_clamp.py
newton_actuators/tests/: __main__.py  test_actuators.py
